<resources>
    <string name="app_name">Namma BJP</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="enter_the_phone_number_to_verify">Enter the phone number to verify</string>
    <string name="phone_number">Phone Number (+91)</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_the_otp_sent_to_your_phone">Enter the OTP sent to your phone</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="one_time_password_otp">One Time Password (OTP)</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="home">Home</string>
    <string name="voter_s_list">Voter List</string>
    <string name="downloading_voter_s_list_please_wait">Downloading voter\'s list. Please wait</string>
    <string name="download_complete">Download completed. Saving the data..</string>
    <string name="search_by">Search by name or voter id</string>
    <string name="search">Search</string>
    <string name="voter_id">Voter Id:</string>
    <string name="voter_name">Voter Name:</string>
    <string name="section_name">Section Name:</string>
    <string name="mobile_no">Mobile No:</string>
    <string name="update_phone_no">Update phone number</string>
    <string name="send_voter_slip">Send voter slip</string>
    <string name="voter_slip">Voter Slip</string>
    <string name="no_voter_s_found">No voter\'s found</string>
    <string name="login">Login</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="survey">Survey</string>
    <string name="voter_status">Voter Status</string>
    <string name="reports">Booth wise Reports</string>
    <string name="profile">Profile</string>
    <string name="refresh_voter_list">Refresh Voter List</string>
    <string name="logout">Logout</string>
    <string name="verifying_otp">Verifying OTP</string>
    <string name="otp_verified">OTP Verified</string>
    <string name="downloading_candidate_details">Downloading Candidate Detail\'s</string>
    <string name="name_voter_id">Name - Voter Id :</string>
    <string name="phone_number_colon">Phone Number :</string>
    <string name="voter_details">Voter Details</string>
    <string name="update_phone_number">Update Phone Number</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="refreshing_voter_list_please_wait">Refreshing Voter List. Please wait!</string>
    <string name="candidate_details">Candidate Details</string>
    <string name="candidate_manifesto_url">Candidate Manifesto URL</string>
    <string name="news_letters">News Letters</string>
    <string name="candidate_urls">Candidate URLs</string>
    <string name="house_no">House No:</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="father_name">Father Name:</string>
    <string name="family_tree_genealogy">Family Tree/ Genealogy</string>
    <string name="family_tree">Family Tree</string>
    <string name="family_member_s_not_found">Family member\'s not found :(</string>
    <string name="initiate_survey">Initiate Survey</string>
    <string name="question">Question:</string>
    <string name="options">Options:</string>
    <string name="select_any_one_of_the_below_survey">Select any one of the below survey</string>
    <string name="send_survey">Send Survey</string>
    <string name="sending_slip">Sending slip. Please wait!</string>
    <string name="whatsapp_survey">Voters Whatsapp Survey</string>
    <string name="previous_election_result_data">Previous election result data</string>
    <string name="submit">Submit</string>
    <string name="report">Reports</string>
    <string name="no_reports_found">No Reports found:(</string>
    <string name="no_survey_s_found">No Survey\'s found:(</string>
    <string name="assembly_constituency">Assembly Constituency</string>
    <string name="state">State</string>
    <string name="polling_station">Polling Station</string>
    <string name="gender_">Gender</string>
    <string name="serial_no">Serial No</string>
    <string name="part_no">Part No:</string>
    <string name="ac_no">AC No</string>
    <string name="report_phone">Report-Phone</string>
    <string name="report_agewise">Report-AgeWise</string>
    <string name="report_colourwise">Report-ColourWise</string>
</resources>