<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/otpHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/epilogue_medium"
            android:padding="10dp"
            android:text="@string/let_s_start"
            android:textColor="@color/blue"
            android:textSize="24sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/otpDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/otpHeading"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/enter_the_phone_number_to_verify"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/otpDesc"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/epilogue_regular"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/loadingProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/getOtpButton"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:indeterminate="true"
            android:indeterminateBehavior="cycle"
            android:indeterminateOnly="true"
            android:indeterminateTint="@color/primary_yellow" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/getOtpButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/epilogue_medium"
            android:text="@string/get_otp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:backgroundTint="@color/primary_yellow" />

    </RelativeLayout>
</layout>