<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/epilogue_semi_bold"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/verify_otp"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/otpInputLayout"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/epilogue_medium"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/enter_the_otp_sent_to_your_phone"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otpInputLayout"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otpEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/epilogue_semi_bold"
                android:gravity="center"
                android:hint="@string/one_time_password_otp"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="@color/black"
                android:textSize="18sp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/downloadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/loadingProgressBar"
            android:gravity="center"
            android:text="@string/downloading_voter_s_list_please_wait"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/epilogue_semi_bold"
            android:textSize="16sp"
            android:visibility="gone"/>


        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/loadingProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/buttonLayout"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:indeterminate="true"
            android:indeterminateBehavior="cycle"
            android:indeterminateOnly="true"
            android:indeterminateTint="@color/primary_yellow" />

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/verifyOtpButton"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/epilogue_medium"
                android:text="@string/verify_otp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:backgroundTint="@color/primary_yellow" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/resendOtpButton"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/epilogue_medium"
                android:text="@string/resend_otp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:backgroundTint="@color/primary_yellow"
                android:enabled="false"/>

        </LinearLayout>
    </RelativeLayout>
</layout>