<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/epilogue_bold"
            android:padding="5dp"
            android:text="@string/survey"
            android:textColor="@color/primary_light"
            android:textSize="26sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/subHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/epilogue_regular"
            android:padding="5dp"
            android:text="@string/select_any_one_of_the_below_survey"
            android:textColor="@color/primary_dark"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/surveyRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/subHeading"
            android:layout_above="@id/footer"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            tools:listitem="@layout/survey_card" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/loadingProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:indeterminate="true"
            android:indeterminateBehavior="cycle"
            android:indeterminateOnly="true"
            android:indeterminateTint="@color/primary_dark" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelButton"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/primary_dark"
                    app:backgroundTint="@color/white"
                    app:strokeColor="@color/primary_light"
                    app:strokeWidth="1dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submitSurveyButton"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/send_survey"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/primary_light" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>
</layout>